package connect4.views;

import connect4.types.Color;

public interface PlayerView {

    void writeWinner(Color color);
}
