package connect4.views;

public interface ResumeView {

    public boolean read();
}
