package connect4.views;

public interface StartView{

    void write();
}